--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -1,11 +1,148 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jTG-NB-UoW">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Login View Controller-->
+        <scene sceneID="Ms0-kJ-AZg">
+            <objects>
+                <viewController id="jTG-NB-UoW" customClass="LoginViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Q6g-UP-ide">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hka-Qq-H34">
+                                <rect key="frame" x="78.5" y="304.5" width="218" height="58"/>
+                                <color key="backgroundColor" red="0.82013458009999995" green="0.4027834535" blue="0.17637526989999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="218" id="rfI-C0-f0V"/>
+                                    <constraint firstAttribute="height" constant="58" id="w3L-4C-9Qd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="38"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" systemColor="labelColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="onLoginButton:" destination="jTG-NB-UoW" eventType="touchUpInside" id="92w-LQ-mrV"/>
+                                    <segue destination="aQ6-s0-D8J" kind="presentation" identifier="loginToHome" id="eX2-sT-0g9"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="HS4-9D-YbM"/>
+                        <color key="backgroundColor" systemColor="labelColor"/>
+                        <constraints>
+                            <constraint firstItem="hka-Qq-H34" firstAttribute="centerY" secondItem="Q6g-UP-ide" secondAttribute="centerY" id="CHX-sM-cyh"/>
+                            <constraint firstItem="hka-Qq-H34" firstAttribute="centerX" secondItem="Q6g-UP-ide" secondAttribute="centerX" id="EkL-GN-Boc"/>
+                            <constraint firstItem="hka-Qq-H34" firstAttribute="centerY" secondItem="Q6g-UP-ide" secondAttribute="centerY" id="OAa-vF-W7d"/>
+                            <constraint firstItem="hka-Qq-H34" firstAttribute="centerX" secondItem="Q6g-UP-ide" secondAttribute="centerX" id="OCO-VG-d3R"/>
+                            <constraint firstItem="hka-Qq-H34" firstAttribute="centerY" secondItem="Q6g-UP-ide" secondAttribute="centerY" id="VqN-g4-iau"/>
+                            <constraint firstItem="hka-Qq-H34" firstAttribute="centerX" secondItem="Q6g-UP-ide" secondAttribute="centerX" id="jzC-h5-OLR"/>
+                            <constraint firstItem="hka-Qq-H34" firstAttribute="centerY" secondItem="Q6g-UP-ide" secondAttribute="centerY" id="k6W-dS-n6B"/>
+                            <constraint firstItem="hka-Qq-H34" firstAttribute="centerX" secondItem="Q6g-UP-ide" secondAttribute="centerX" id="rVZ-uB-vU9"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XhM-yw-apX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="86.806596701649184"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="w2o-tk-Ofx">
+            <objects>
+                <tableViewController id="XaQ-ch-tqT" customClass="HomeTableViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="0Uv-lA-DZX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="113" id="YLR-rs-FxA" customClass="TweetTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="113"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YLR-rs-FxA" id="QDN-OA-IQO">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="113"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iWX-yg-lRq">
+                                            <rect key="frame" x="25" y="11" width="75" height="75"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="se6-GY-KK8">
+                                            <rect key="frame" x="108" y="11" width="251" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="3aW-vY-FZ2"/>
+                                                <constraint firstAttribute="width" constant="251" id="chx-IH-cNB"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Tweet Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ll0-GR-qwk">
+                                            <rect key="frame" x="108" y="40" width="251" height="62"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="71" id="2pU-68-Fbd"/>
+                                                <constraint firstAttribute="width" constant="251" id="lVV-6l-mQ3"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="profileImageView" destination="iWX-yg-lRq" id="58s-sQ-U5B"/>
+                                    <outlet property="tweetContentLabel" destination="ll0-GR-qwk" id="6QI-tR-5Ua"/>
+                                    <outlet property="userNameLabel" destination="se6-GY-KK8" id="dPJ-FO-bXw"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="XaQ-ch-tqT" id="rgO-22-eQJ"/>
+                            <outlet property="delegate" destination="XaQ-ch-tqT" id="dIQ-DA-eM9"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Home" id="dnZ-oH-ALF">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="bDv-Nu-sWh">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="onLogout:" destination="XaQ-ch-tqT" id="axW-NI-bCQ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sso-Xc-aYX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1893.5999999999999" y="86.806596701649184"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="yUX-UL-p3c">
+            <objects>
+                <navigationController id="aQ6-s0-D8J" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="tLe-lO-wBr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.82013458009999995" green="0.4027834535" blue="0.17637526989999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="XaQ-ch-tqT" kind="relationship" relationship="rootViewController" id="dUR-EF-Vgl"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BMC-fR-cqG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1012" y="87"/>
+        </scene>
+    </scenes>
+    <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
