--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -68,11 +68,14 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="113"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iWX-yg-lRq">
-                                            <rect key="frame" x="25" y="11" width="75" height="75"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iWX-yg-lRq">
+                                            <rect key="frame" x="16" y="11" width="75" height="75"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="75" id="gvJ-Zd-Nq8"/>
+                                                <constraint firstAttribute="width" constant="75" id="swk-Fd-8fi"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="se6-GY-KK8">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="se6-GY-KK8">
                                             <rect key="frame" x="108" y="11" width="251" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="3aW-vY-FZ2"/>
@@ -82,7 +85,7 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Tweet Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ll0-GR-qwk">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ll0-GR-qwk">
                                             <rect key="frame" x="108" y="40" width="251" height="62"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="71" id="2pU-68-Fbd"/>
@@ -93,6 +96,16 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="se6-GY-KK8" firstAttribute="leading" secondItem="iWX-yg-lRq" secondAttribute="trailing" constant="17" id="5pg-2N-JmY"/>
+                                        <constraint firstItem="se6-GY-KK8" firstAttribute="top" secondItem="QDN-OA-IQO" secondAttribute="topMargin" id="9wV-pP-emf"/>
+                                        <constraint firstItem="ll0-GR-qwk" firstAttribute="bottom" secondItem="QDN-OA-IQO" secondAttribute="bottomMargin" id="Lrd-b7-JSF"/>
+                                        <constraint firstItem="ll0-GR-qwk" firstAttribute="top" secondItem="se6-GY-KK8" secondAttribute="bottom" constant="8" id="OTu-jH-dV0"/>
+                                        <constraint firstItem="ll0-GR-qwk" firstAttribute="leading" secondItem="iWX-yg-lRq" secondAttribute="trailing" constant="17" id="PSj-qu-IRS"/>
+                                        <constraint firstItem="ll0-GR-qwk" firstAttribute="trailing" secondItem="QDN-OA-IQO" secondAttribute="trailingMargin" id="bid-el-Xz4"/>
+                                        <constraint firstItem="iWX-yg-lRq" firstAttribute="leading" secondItem="QDN-OA-IQO" secondAttribute="leadingMargin" id="ifW-MY-eHV"/>
+                                        <constraint firstItem="iWX-yg-lRq" firstAttribute="top" secondItem="QDN-OA-IQO" secondAttribute="topMargin" id="uJ3-MK-u15"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="profileImageView" destination="iWX-yg-lRq" id="58s-sQ-U5B"/>
