--- a/Twitter/Launch Screen.storyboard
+++ b/Twitter/Launch Screen.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="TwitterLogoBlue" translatesAutoresizingMaskIntoConstraints="NO" id="LJ0-bf-E0y">
-                                <rect key="frame" x="70" y="327" width="274" height="243"/>
+                                <rect key="frame" x="67.442207272853921" y="327.89864822051413" width="274.00000000000023" height="243.00000000000028"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
